# uvautoboat

./: .gitignore  ATLANTIS_FIX_SUMMARY.md  AVOIDANCE_CODE_EXPLANATION.md  AVOIDANCE_CODE_VISUAL.md  AVOIDANCE_FIX_SUMMARY.md  AVOIDANCE_ISSUE_ROOT_CAUSE.md  AVOIDANCE_RECOVERY_GUIDE.md  BOAT_MOVEMENT_TROUBLESHOOT.md  Board.md  Board.md.bak  CODE_REVIEW.md  COMPLETION_REPORT.md  COORDINATE_SYSTEM_GUIDE.md  FINAL_SUMMARY.md  LAUNCH_TUNING_QUICK_GUIDE.txt  LAUNCH_YAML_GUIDE.md  LIDAR_OBSTACLE_AVOIDANCE_GUIDE.md  MISSION_CONTROL_GUIDE.md  OPTIMIZATION_RECOMMENDATION.md  PID_ANALYSIS.md  QUICK_FIX_GUIDE.txt  QUICK_REFERENCE_CARD.md  QUICK_REVIEW_SUMMARY.md  README.md  README.md.bak2  README_QUICKSTART.md  README_longversion.md  README_shortversion.md  REVIEW_COMPLETE.md  TESTING_DIAGNOSTIC_GUIDE.md  diagnose_boat.sh  frames_2025-11-26_16.07.13.gv  frames_2025-11-27_21.52.18.gv  monitor_boat.sh  quick_test.sh  test_environment_coordinates.csv
control/: LICENSE  package.xml  setup.py
control/config/: hazard_world_boxes.yaml
control/control/: all_in_one_stack.py  atlantis_controller.py  buran_controller.py  buran_controller_fixed.py  goal_sequencer.py  gps_imu_pose.py  keyboard_teleop.py  path_follower.py  (+4 more)
environment_plugins/: CMakeLists.txt  package.xml
environment_plugins/hooks/: environment_plugins.dsv.in
environment_plugins/resource/: environment_plugins
environment_plugins/src/: dead_zone_plugin.cc
launch/: atlantis.launch.py  atlantis.launch.yaml  robust_avoidance.launch.yaml  vostok1.launch.yaml
legacy/: DEPRECATED.md  all_in_one_stack.py  goal_sequencer.py  hazard_world_boxes.yaml  pose_filter.py  vostok1_integrated.py
one_click_launch_all/: launch_robust_avoidance_complete.sh  launch_simulation_EXAMPLE.sh  launch_universal.sh  launch_vostok1_complete.sh
path/: astar_planner.py  setup.py
plan/: map_astar_planner.py  package.xml  setup.py
robust_avoidance/: monitor.sh  readme_for_all_in_one_bringup_launch.md  readme_robust_avoidance.md
test_environment/: New_world_withOBS.sdf  dead_zone_plugin.cc  sydney_regatta_DEFAULT.sdf  sydney_regatta_custom.sdf  sydney_regatta_randomsmoke.sdf  sydney_regatta_smoke.sdf  sydney_regatta_smoke_wildlife.sdf  wamv_3d_lidar.xacro  wildlife_task_DEFAULT.sdf
web_dashboard/: PORT_ALLOCATION.md  Readme_webdashboard.md  app.js  index.html  style.css  style_merged.css  style_tno.css
wiki/: 3D-LIDAR-Processing.md  3D_LIDAR_Processing.md  Common-Issues.md  Common_Issues.md  Home.md  Installation-Guide.md  Installation_Guide.md  Quick-Start.md  Quick_Start.md  README.md  README_WIKI.md  SASS.md  System-Overview.md  System_Overview.md  UPLOAD_INSTRUCTIONS.md  WIKI_SUMMARY.md
(+71 files in other folders)
